chapter12A/host-firewall/block-host-endpoints.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: block-host-endpoints
spec:
  endpointSelector: {}
  enableDefaultDeny:
    ingress: false
  ingressDeny:
    - fromCIDR:
        - "10.89.0.11/32"
