chapter12A/host-firewall/block-host.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: block-host
spec:
  nodeSelector: {}
  ingress:
    - toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "22"
              protocol: TCP
    - fromEntities:
        - cluster
  ingressDeny:
    - fromCIDR:
        - "10.88.0.3/32"
