chapter12A/host-firewall/host-lockdown.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: host-lockdown
spec:
  nodeSelector: {}
  ingress:
    - {}
  egress:
    - {}
